move code generation to commons project
(necessary to avoid compile problems after a clean)